# dcalc

./: CMakeLists.txt
src/: main.c
src/ui/: icons.h  result.c  result.h  ui.c  ui.h
